# CppTemplate

./: CMakeLists.txt  CMakeLists_8txt.html  Makefile  README.md  dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_51f60337a5995dc2de5a0e1b11c8e575.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  math__lib_2CMakeLists_8txt.html  math__lib_8cpp.html  math__lib_8cpp__incl.dot  math__lib_8h.html  math__lib_8h__dep__incl.dot  math__lib_8h_source.html  my__lib_2CMakeLists_8txt.html  my__lib_8cpp.html  my__lib_8cpp__incl.dot  my__lib_8h.html  my__lib_8h__dep__incl.dot  my__lib_8h_source.html
.github/workflows/: ubuntu.yml
app/: CMakeLists.txt  main.cpp
search/: all_0.js  all_1.js  all_3.js  all_4.js  files_1.js  functions_0.js  functions_1.js  functions_2.js
src/: CMakeLists.txt
src/my_lib/: CMakeLists.txt  my_lib.cpp  my_lib.h
test/: CMakeLists.txt  main.cpp
